Fix: nav alignment issue

--- a/intro-section-with-dropdown-navigation-main/style.css
+++ b/intro-section-with-dropdown-navigation-main/style.css
@@ -35,6 +35,7 @@
 
 body {
   font-family: var(--font-family);
+  background-color: var(--neutral-black);
 }
 
 ul {
@@ -55,6 +56,7 @@ a {
   display: flex;
   justify-content: space-between;
   padding: 1.5rem 1rem;
+  background-color: var(--neutral-white);
 }
 
 #menu-button {
@@ -70,6 +72,9 @@ a {
 .main-container {
   display: flex;
   flex-direction: column-reverse;
+  height: 75%;
+  margin-bottom: 3rem;
+  background-color: var(--neutral-white);
 }
 
 .hero-image img {
@@ -254,6 +259,7 @@ a {
 
   body {
     height: 100vh !important;
+    background-color: var(--neutral-white);
   }
 
   .menu-button {
@@ -304,7 +310,7 @@ a {
     gap: 3rem;
   }
   .nav-items li {
-    font-size: 14px;
+    font-size: 16px;
     font-weight: var(--fw-regular);
   }
   .buttons {
@@ -323,8 +329,9 @@ a {
     flex-direction: row;
     /* gap: 5rem; */
     width: 80%;
-    /* height: 70%; */
+    height: 73%;
     margin: 1.5rem auto 4rem;
+    background-color: var(--neutral-white);
   }
   .hero-image {
     width: 40%;
@@ -355,6 +362,7 @@ a {
   }
   .button-learn button {
     margin: 0;
+    padding: 1rem 1.5rem;
   }
 
   .brands {
